<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">高铁抢修地图</string>
    <string name="myname">高铁抢修地图</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="way_search">路线</string>
    <string name="sdk_name">高铁抢修地图</string>
    <string-array name="sdkapi_items">
        <item>关键字搜索</item>
        <item>周边搜索</item>
        <item>手机语音识别</item>
        <item>外部语音流识别</item>
        <item>TTS</item>
        <item>反GEO</item>
        <item>线路规划demo1</item>
        <item>线路规划demo2</item>
        <item>离线数据管理</item>
       	<item>自定义图层</item>
    </string-array>
    <string name="search_start">搜索</string>
    <string name="search_tips">离线检索需要使用"导航离线数据下载"demo下载数据之后才能正常使用！检索范围固定为广东省-深圳市，其他城市请修改demo源代码。</string>
    <string name="antigeo_tips">离线反geo需要使用"导航离线数据下载"demo下载数据之后才能正常使用！</string>
    <string name="asr_tips">语音识别需要使用"导航离线数据下载"demo下载广东数据之后才能正常使用！其他城市请修改demo源代码。</string>
    <string name="suggest_start">提示</string>
    <string name="search_hint">请输入关键字</string>
    <string name="record_recording">\u2026正在录音\u2026</string>
    <string name="record_recognizing">\u2026正在识别\u2026</string>
    <string name="voiceinput">外部语音流识别</string>
    <string name="voicenormal">手机语音流识别</string>
    <string name="keyword_search">关键字搜索</string>
    <string name="space_search">周边搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_empty">识别结果为空</string>
    <string name="search_fail">识别无效</string>
    <string name="record_start">点击开启</string>
    
    <!-- 离线数据管理 -->
	<string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
	<string name="title_route_plan_demo">2. 路线规划(RoutePlanDemo)</string>
    <string name="title_cruiser">3. 电子狗(CruiserDemo)</string>
    <string name="title_layer">4. 自定义地图图层(MapLayerDemo)</string>
    <string name="title_offline_data">5. 导航离线数据下载(DownloadDemo)</string>
    <string name="title_keyword_search">6. POI搜索-关键字(KeySearchDemo)</string>
    <string name="title_nearby">7. POI搜索-分类(CatalogSearchDemo)</string>
    <string name="title_degeo">8. 反GEO(ReverseGeoDemo)</string>
    <string name="title_tts">9. TTS-Text To Speech(TTSDemo)</string>
    <string name="title_asr">10. 语音识别(VoiceDemo)</string>
    <string name="title_asr_input">11. 外部语音识别(VoiceInputDemo)</string>
    <string name="title_key_verify_demo">12. 密钥验证(KeyVerifyDemo)</string>
    <string name="title_charset_change_demo">13. 简体繁体转换(CharsetChangeDemo)</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    
    <!-- 繁体简体切换 -->
    <string name="change_to_simplified">地图切换为简体</string>
    <string name="change_to_traditional">地图切换为繁体</string>
    <string name="change_to_simplified_tips">已切换为简体，请在地图图层页看效果</string>
    <string name="change_to_traditional_tips">已切换为繁体，请在地图图层页看效果</string>
    <string name="search">搜索</string>
    <string name="bycle">骑行</string>
    <string name="car">驾车</string>
    <string name="walk">步行</string>
    <string name="start_navi">开始导航</string>
    <string name="save">保存</string>
    <string name="sub_name_hint">请输入地点名称</string>
    <string name="sub_info_hint">请输入地点简介信息</string>
    <string name="new_sub">新建地点信息</string>
    <string name="camera">相机</string>
    <string name="alerm">相册</string>
    <string name="cancel">取消</string>
    <string name="origImg">原图</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="no_photo">相册没有图片</string>
    <string name="imgRetatoLeft">浏览图片向左转</string>
    <string name="imgRetatoRight">浏览图片向右转</string>
    <string name="selece_start">选择出发地</string>
    <string name="selece_dist">选择目的地</string>
    
    <string name="self_pos">我的位置</string>
    <string name="add">添加</string>
    <string name="set">设置</string>
    <string name="add_level_hint">请输入要添加内容</string>
    <string name="input_level_hint">请再次输入添加内容</string>
    <string name="show_start_hint">选择出发地</string>
    <string name="show_dist_hint">选择目的地</string>
    <string name="root_connt">一级目录</string>
    <string name="second_connt">二级目录</string>
    <string name="select_pos_hing_frist">点击左侧图标定位当前位置或点击地图选位置</string>
    <string name="permission_label_cancel">取消</string>
    <string name="quit_warnning">确定要退出管理员状态，退出后不能管理地点信息？</string>
    <string name="updata_warnning">下载完成后选择安装方可使用</string>
    <string name="update_log_title">发现新版本，请更新</string>
    <string name="immediately_update">立即升级</string>
    <string name="loading">正在从服务器获取数据</string>
</resources>
