<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/blue_light"
    >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/blue_light"
        android:gravity="center_vertical"
        android:layout_marginBottom="3dp"
        >
        <Button
            android:layout_width="67dp" 
      	    android:layout_height="wrap_content"
        	android:textSize="20sp"
        	android:textColor="#fff"
        	android:id="@+id/cancel"
        	android:text="@string/cancel"
        	android:background="@android:color/transparent"
      	    android:layout_centerVertical="true"
      	    android:layout_marginRight="5dp"
            android:layout_alignParentRight="true" 
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_light"
        android:gravity="center_vertical"
        android:layout_marginTop="3dp"
        >
 		<ImageView 
	        android:id="@+id/IV_album_isBig"
	        android:layout_width="25dp"
	        android:layout_height="25dp"
	        android:background="@drawable/ablum_select_photo_normal"
	        android:layout_marginTop="12dp"
	        android:layout_marginLeft="15dp"/>
 		<TextView 
 		    android:id="@+id/TV_album_isBig"
 		    android:text="@string/origImg"
 		    android:layout_width="wrap_content"
 		    android:layout_height="match_parent"
 		    android:textColor="@color/white"
 		    android:textSize="22sp"
 		    android:gravity="center_vertical"
 		    android:layout_toRightOf="@id/IV_album_isBig"/>
        <Button
            android:id="@+id/ok_button"
            android:text="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@android:color/transparent"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp"
        android:background="@color/albumback" />
    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_photo" 
        android:textColor="@color/black"
        />

</RelativeLayout>