<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_nearby_fullpage_back_normal" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_sub"
            android:textColor="@color/white"
            android:textSize="@dimen/show_title" />

        <TextView
            android:id="@+id/ib_save_sub_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/show_conn" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="3dp" >

                <com.baidu.mapapi.map.MapView
                    android:id="@+id/bdmp_self_pos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal" 
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/ib_selp_pos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/addpoi_loc" />
                    <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:text="@string/select_pos_hing_frist"/>
                </LinearLayout>
            </RelativeLayout>

            <EditText
                android:id="@+id/et_sub_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/serch_input_bg"
                android:hint="@string/sub_name_hint"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="@dimen/tv_line_time" />

            <EditText
                android:id="@+id/et_sub_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/serch_input_bg"
                android:gravity="top"
                android:hint="@string/sub_info_hint"
                android:maxLines="7"
                android:minLines="7"
                android:padding="3dp"
                android:textSize="@dimen/ed_sub_info" />

            <com.ppl.sxgtqx.view.MyGridView
                android:id="@+id/noScrollgridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:horizontalSpacing="3dp"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>