<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- 顶部显示 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_nearby_fullpage_back_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/way_search"
                android:textColor="@color/white"
                android:textSize="@dimen/show_title" />

            <TextView
                android:id="@+id/ib_search_neva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/show_conn" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/pg_rout_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_bycle"
                style="@style/style_RadioButton"
                android:text="@string/bycle" />

            <RadioButton
                android:id="@+id/rb_car"
                style="@style/style_RadioButton"
                android:checked="true"
                android:text="@string/car" />

            <RadioButton
                android:id="@+id/rb_walk"
                style="@style/style_RadioButton"
                android:text="@string/walk" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal" >

            <View
                android:id="@+id/view_bycle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:visibility="invisible" />

            <View
                android:id="@+id/view_car"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <View
                android:id="@+id/view_walk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_condition_icon_switch_normal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_st" />

                <LinearLayout
                    android:id="@+id/ll_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/serch_input_bg"
                    android:orientation="horizontal"
                    android:padding="6dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_show_start"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_start_hint"
                        android:textSize="@dimen/show_title"
                        android:textColor="@color/grenn" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="5dp"
                        android:src="@drawable/icon_down" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_en" />

                <LinearLayout
                    android:id="@+id/ll_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/serch_input_bg"
                    android:orientation="horizontal"
                    android:padding="6dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_show_end"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_dist_hint"
                        android:textColor="@color/red"
                        android:textSize="@dimen/show_title" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:padding="5dp"
                        android:src="@drawable/icon_down" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bdmp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >

        <GridView
            android:id="@+id/gv_rout_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:visibility="invisible" >
        </GridView>

        <TextView
            android:id="@+id/tv_bike_walk_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_line_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="2dp"
            android:background="@color/blue_light" />

        <LinearLayout
            android:id="@+id/ll_start_nevi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="6dp" >

            <ImageButton
                android:id="@+id/ib_neci_type"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/icon_route_car_blue" />

            <TextView
                android:id="@+id/tv_nevi_conn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/start_navi"
                android:textColor="@color/blue_light" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>