<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        >

        <ImageButton
            android:id="@+id/ib_set_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" 
            android:background="@android:color/transparent"
            android:src="@drawable/icon_nearby_fullpage_back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="@dimen/show_title" />
    </RelativeLayout>
    
    <!-- 登录 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="10dp">
        <ImageView 
            android:id="@+id/iv_user_nic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_center_default_head"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"/>
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_login_sta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/show_conn"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/tv_login_disc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ed_sub_info"
                android:textColor="@color/txt_gray"/>
        </LinearLayout>
        
        <Button 
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_login"
            android:textSize="@dimen/show_conn"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/user_info_bg_signed"/>
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray_light"/>

    <ListView
        android:id="@+id/lv_set_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="#00000000"
        android:divider="@color/gray_light"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@+id/ll_set_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_light" />

        <TextView
            android:id="@+id/tv_set_select_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/city_title_bg"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/show_conn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <ListView
            android:id="@+id/lv_map_contry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pos_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_level_frist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/city_title_bg"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/root_connt"
                android:textColor="@color/white"
                android:singleLine="true"
                android:textSize="@dimen/show_conn" />
            
            <TextView 
                android:id="@+id/tv_level_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/city_title_bg"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/second_connt"
                android:textColor="@color/white"
                android:visibility="gone"
                android:singleLine="true"
                android:textSize="@dimen/show_conn"/>
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <ListView
            android:id="@+id/lv_pos_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>